samples/_failures_safe/1761267265_1bca2f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0e308a1c.c: In function ‘main’:
./samples/SAFE/__tmp_0e308a1c.c:138:26: error: expected ‘;’ at end of input
  138 |             error_entries
      |                          ^
      |                          ;
./samples/SAFE/__tmp_0e308a1c.c:138:13: error: expected declaration or statement at end of input
  138 |             error_entries
      |             ^~~~~~~~~~~~~
./samples/SAFE/__tmp_0e308a1c.c:138:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0e308a1c.c:138:13: error: expected declaration or statement at end of input
